# AI-Data-Assistant

./: .gitignore  AGENTS.md  README.md  pyproject.toml  streamlit_app.py
data/: users.csv
knowledge/: category_inference_rules.md  category_normalization_rules.md  credit_card_recommendations.md  dataset_structure.md  experiment_history.md  product_notes.md  spending_analysis_rules.md  strategy.md
src/product_insights_assistant/: __init__.py  analysis.py  cli.py  data.py  evaluate.py  rag.py  webapp.py
