[project]
name = "ai-data-assistant"
version = "0.1.0"
description = "A local Streamlit app for credit card spending analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "altair>=6.0.0",
  "pandas>=2.2.0,<3.0.0",
  "streamlit>=1.57.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
